Config columns now 100% width in mobile view. Closes #54.

--- a/public/client.html
+++ b/public/client.html
@@ -166,6 +166,7 @@
   <script src="js/libs/jquery.form.min.js"></script>
   <script src="js/libs/jquery.touchSwipe.min.js"></script>
   <script src="js/libs/fancybox/jquery.fancybox.pack.js?v=2.1.5"></script>
+  <script src="js/common.js"></script>
   <script src="js/successwhale.js"></script>
 
 </body>
