--- a/public/login.html
+++ b/public/login.html
@@ -56,6 +56,7 @@
   <script src="js/libs/cookies.js"></script>
   <script src="js/libs/jquery-1.9.1.js"></script>
   <script src="js/libs/knockout-3.0.0.js"></script>
+  <script src="js/common.js"></script>
   <script src="js/successwhale-login.js"></script>
   
   <noscript>
