--- a/public/login.html
+++ b/public/login.html
@@ -6,11 +6,14 @@
     <title>Log In to SuccessWhale</title>
     <link rel="stylesheet" href="css/normalize.css"/>
     <link rel="stylesheet" href="css/style-login.css"/>
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="icon" href="img/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
 <body>
+  <div id="whatsnewbox">
+    <p>Welcome to SuccessWhale version 3! Would you like to <a href="/whatsnew">see what's new</a>?</p>
+  </div>
   <div id="part1">
     <div id="logodiv">
       <img id="logo" src="img/logo/successwhale.png"/>
@@ -18,6 +21,9 @@
     </div>
     <div id="intro">
       <p>SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!</p>
+      <p id="readmore">
+        <a href="/about">Read more &raquo;</a>
+      </p>
     </div>
   </div>
   <div id="part2">
@@ -49,6 +55,9 @@
       </div>
       <p>Client version 3.0.0-beta1</p>
     </div>
+  </div>
+  <div id="footer">
+    <a href="/privacy">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
   </div>
   
   <a href="https://github.com/ianrenton/SuccessWhale"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
