--- a/public/whatsnew.html
+++ b/public/whatsnew.html
@@ -15,11 +15,11 @@
     <div id="topmenu">
       <a id="configbutton" class="button topmenuitem" href="/"><i class="fa fa-arrow-left"></i> Back</a>
     </div>
-    <h2>What's New in SuccessWhale v3.0.0</h2>
+    <h2>What's New in SuccessWhale v3.0</h2>
   </div>
   <div id="main">
     <img style="float:right; width:30%;" src="img/logo/successwhale.png" title="SuccessWhale logo" alt="SuccessWhale logo"/>
-    <p>SuccessWhale v3.0.0 is a complete rewrite of the original SuccessWhale v1/v2 software. Instead of a horrible mash of HTML rendering functions inside PHP scripts, SuccessWhale v3 is neatly separated into a pure Javascript web interface and a Ruby API, which communicate using JSON. If that's too many abbreviations for this time of the morning, don't worry &mdash; all you need to know is that it's designed <em>better</em>.</p>
+    <p>SuccessWhale version 3 is a complete rewrite of the original SuccessWhale v1/v2 software. Instead of a horrible mash of HTML rendering functions inside PHP scripts, SuccessWhale v3 is neatly separated into a pure Javascript web interface and a Ruby API, which communicate using JSON. If that's too many abbreviations for this time of the morning, don't worry &mdash; all you need to know is that it's designed <em>better</em>.</p>
     <p>There have been a few changes to what you'll see in the web interface. Hopefully you'll agree that they are improvements!</p>
     <h2>The Main Screen</h2>
     <p>The main screen of SuccessWhale works much the same as before: post entry box and buttons on top, configurable columns of all your feeds below.</p>
