Use new 'fetchedforuser' field to remove '@me' from default reply text

--- a/public/client.html
+++ b/public/client.html
@@ -143,7 +143,7 @@
                   <input class="replyPostToAccounts" name="accounts" type="hidden" data-bind="value: service+'/'+fetchedforuserid"/>
                   <input class="replyInReplyToID" name="in_reply_to_id" type="hidden" data-bind="value: content.replytoid"/>
                   <textarea class="replyentry" name="text" data-bind="value: replyText, valueUpdate: 'afterkeydown'" rows="1"></textarea>
-                  <span class="button replybutton"><i class="fa fa-pencil"></i></span>
+                  <span class="button replybutton"><i class="fa fa-pencil"></i> Post</span>
                   <span class="replycharcount" data-bind="text: replyText().length"></span>
                 </form>
               </div>
