Prep for change to bcrypt for password storage

--- a/public/login.html
+++ b/public/login.html
@@ -46,14 +46,14 @@
         <span style="display: inline-block;">Password: <input id="password" data-bind="value: password" type="password" class="textbox"/></span>
         <input type="submit" value="Log in" /></p>
       </div>
-      <div id="loginerrorbox"><span data-bind="text: errormessage"></span></div>
+      <div id="loginerrorbox"><span data-bind="html: errormessage"></span></div>
     </form>
     <div id="serverstatus">
       <div id="serverstatusinner">
         <img src="/img/loading.gif"/>
         <p>Contacting secure server...</p>
       </div>
-      <p>Client version 3.0.2</p>
+      <p>Client version 3.0.4</p>
     </div>
   </div>
   <div id="footer">
