First attempt at Firefox OS webapp

--- a/public/login.html
+++ b/public/login.html
@@ -11,8 +11,11 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
 <body>
-  <div id="whatsnewbox">
+  <div id="whatsnew" class="headerbar">
     <p>Welcome to SuccessWhale version 3! Would you like to <a href="/whatsnew">see what's new</a>?</p>
+  </div>
+  <div id="firefoxinstallheader" class="headerbar">
+    <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a></p>
   </div>
   <div id="part1">
     <div id="logodiv">
@@ -53,7 +56,7 @@
         <img src="/img/loading.gif"/>
         <p>Contacting secure server...</p>
       </div>
-      <p>Client version 3.0.4</p>
+      <p>Client version 3.0.5</p>
     </div>
   </div>
   <div id="footer">
