Visual feedback for Firefox OS App loading header

--- a/public/login.html
+++ b/public/login.html
@@ -15,7 +15,7 @@
     <p>Welcome to SuccessWhale version 3! Would you like to <a href="/whatsnew">see what's new</a>?</p>
   </div>
   <div id="firefoxinstallheader" class="headerbar">
-    <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a></p>
+    <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a> <img class="spinner" src="img/loading-small.gif" /></p>
   </div>
   <div id="part1">
     <div id="logodiv">
