Minor tweaks to login screen

--- a/public/login.html
+++ b/public/login.html
@@ -11,9 +11,6 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon"/>
   </head>
 <body>
-  <div id="whatsnew" class="headerbar">
-    <p>Welcome to SuccessWhale version 3! Would you like to <a href="/whatsnew">see what's new</a>?</p>
-  </div>
   <div id="firefoxinstallheader" class="headerbar">
     <p>You can install SuccessWhale on this device! <a href="#" id="firefoxinstalllink">Click here to install.</a> <img class="spinner" src="img/loading-small.gif" /></p>
   </div>
@@ -24,8 +21,11 @@
     </div>
     <div id="intro">
       <p>SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!</p>
-      <p id="readmore">
+      <p class="readmore">
         <a href="/about">Read more &raquo;</a>
+      </p>
+      <p class="readmore">
+        <a href="/whatsnew">What's new in v3.0 &raquo;</a>
       </p>
     </div>
   </div>
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div id="footer">
-    <a href="/privacy">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
+    <a href="https://twitter.com/successwhaleapp">Follow us @SuccessWhaleApp</a> | <a href="/about">About</a> | <a href="/whatsnew">What's New</a> | <a href="/privacy">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
   </div>
   
   <a href="https://github.com/ianrenton/SuccessWhale"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
