Theme improvements, including new Windows 8 Don't-call-it-Metro theme

--- a/public/client.html
+++ b/public/client.html
@@ -28,7 +28,7 @@
       <span id="attachbutton" data-popover="attachmentdialog"><a href="#"><i class="fa fa-paperclip"></i></a></span>
       <div id="attachmentdialog" class="gpopover">
         <p>Attach file:</p>
-          <input type="file" name="file" id="filetoupload"/>
+          <input type="file" name="file" id="filetoupload"/><br/>
           <input type="button" id="fileclearbutton" value="Clear"/>
       </div>
       <span class="charcount" data-bind="text: postEntryText().length"></span>
