--- a/public/login.html
+++ b/public/login.html
@@ -63,7 +63,7 @@
     <a href="https://twitter.com/successwhaleapp">Follow us @SuccessWhaleApp</a> | <a href="/about">About</a> | <a href="/whatsnew">What's New</a> | <a href="/privacy">Privacy & Security</a> | <a href="https://github.com/ianrenton/SuccessWhale/blob/master/LICENCE.md">BSD-licenced Open Source</a> software | Written by <a href="http://ianrenton.com">Ian Renton</a>
   </div>
   
-  <a href="https://github.com/ianrenton/SuccessWhale"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/ianrenton/SuccessWhale"><img class="github" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
   <script src="js/libs/cookies.js"></script>
   <script src="js/libs/jquery-1.9.1.js"></script>
