Prevent some events from scrolling to the top of the page due to href='#'

--- a/public/client.html
+++ b/public/client.html
@@ -104,19 +104,19 @@
                   <a class="actionbutton" data-bind="click: function(data, event) { $parent.replyvisible(!$parent.replyvisible()); var replybox = $(event.currentTarget).parents('div.item-actions').find('textarea.replyentry'); replybox.focus(); replybox.val($parent.replyText()); }" href="#"><i class="fa fa-reply"></i></a>
                 </li>
                 <li data-bind="if: (name == 'conversation')">
-                  <a class="actionbutton" data-bind="click: function() { loadThreadForItem($parent, ($parent.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible()); }" href="#"><i class="fa fa-comments"></i></a>
+                  <a class="actionbutton" data-bind="click: function() { loadThreadForItem($parent, ($parent.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible());return false; }" href="#"><i class="fa fa-comments"></i></a>
                 </li>
                 <li data-bind="if: (name == 'retweet')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-retweet"></i></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-retweet"></i></a>
                 </li>
                 <li data-bind="if: (name == 'favorite')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-star"></i></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-star"></i></a>
                 </li>
                 <li data-bind="if: (name == 'like')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-thumbs-o-up"></i></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-thumbs-o-up"></i></a>
                 </li>
                 <li data-bind="if: (name == 'delete')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params);} " href="#"><i class="fa fa-trash-o"></i></a>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-trash-o"></i></a>
                 </li>
                 <!-- /ko -->
                 <li data-bind="if: content.permalink">
