Update to Facebook permissions required

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -35,6 +35,8 @@
         <li>To read your feeds and wall</li>
         <li>To manage your notifications</li>
         <li>To see your groups</li>
+        <li>To see your photos</li>
+        <li>To see your friends' photos</li>
         <li>To access your account without needing authorisation every time</li>
     </ul>
     <p>SuccessWhale doesn't do anything with your accounts unless you ask it to.</p>
