--- a/public/client.html
+++ b/public/client.html
@@ -55,9 +55,9 @@
                      * one column visible, selected by swipe. Rest invisible -->
   <div id="columns" data-bind="foreach: columns, style: { width: mobileView() ? '100%' : ((columns().length/colsPerScreen()*100) + '%') }">
     <div data-bind="name: fullpath, attr: {id: 'column'+$index()}, visible: (!($parent.mobileView()) || ($parent.mobileCurrentColumn()==$index())), style: { width: $parent.mobileView() ? '97%' : (100/$parent.columns().length-1 + '%') }" class="column">
-      <div class="colleft" data-bind="visible: ($parent.mobileView() && ($index()!=0))"><a href="#" data-bind="click: function() {mobileColumnLeft();}">&#9664;</a></div>
-      <div class="colright" data-bind="visible: ($parent.mobileView() && ($index()!=$parent.columns().length-1))"><a href="#" data-bind="click: function() {mobileColumnRight();}">&#9654;</a></div>
-      <div class="columnloading" data-bind="visible: loading"></div>
+      <div class="colleft" data-bind="visible: ($parent.mobileView() && ($index()!=0))"><a href="#" data-bind="click: function() {mobileColumnLeft();}" title="Move Left"><i class="fa fa-chevron-left"></i></a></div>
+      <div class="colright" data-bind="visible: ($parent.mobileView() && ($index()!=$parent.columns().length-1))"><a href="#" data-bind="click: function() {mobileColumnRight();}" title="Move Right"><i class="fa fa-chevron-right"></i></a></div>
+      <div class="columnloading" data-bind="visible: loading"><i class="fa fa-refresh fa-spin"></i></div>
       <h4 class="columnheading" data-bind="text: title"></h4>
       <!-- ko foreach: items -->
         <div class="item" data-bind="css: (moment().diff(moment(content.time),'minutes') < $parents[1].highlightTime()) ? 'item-new' : 'item-old'">
@@ -99,33 +99,52 @@
           <!-- ko if: ((content.actions.length > 0) || content.permalink) -->
           <div class="item-actions">
               <ul class="actionlist">
-                <!-- ko foreach: content.actions -->
+              <!-- ko foreach: content.actions -->
+                <!-- ko if: (name == 'reply') -->
                 <li data-bind="if: (name == 'reply')">
-                  <a class="actionbutton" data-bind="click: function(data, event) { $parent.replyvisible(!$parent.replyvisible()); var replybox = $(event.currentTarget).parents('div.item-actions').find('textarea.replyentry'); replybox.focus(); replybox.val($parent.replyText()); }" href="#"><i class="fa fa-reply"></i></a>
-                </li>
-                <li data-bind="if: (name == 'conversation')">
-                  <a class="actionbutton" data-bind="click: function() { loadThreadForItem($parent, ($parent.content.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible());return false; }" href="#"><i class="fa fa-comments"></i></a>
-                </li>
-                <li data-bind="if: (name == 'retweet')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-retweet"></i></a>
-                </li>
-                <li data-bind="if: (name == 'favorite')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-star"></i></a>
-                </li>
-                <li data-bind="if: (name == 'like')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-thumbs-o-up"></i></a>
-                </li>
-                <li data-bind="if: (name == 'delete')">
-                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#"><i class="fa fa-trash-o"></i></a>
+                  <a class="actionbutton" data-bind="click: function(data, event) { $parent.replyvisible(!$parent.replyvisible()); var replybox = $(event.currentTarget).parents('div.item-actions').find('textarea.replyentry'); replybox.focus(); replybox.val($parent.replyText()); }" href="#" title="Reply"><i class="fa fa-reply"></i></a>
                 </li>
                 <!-- /ko -->
-                <li data-bind="if: content.permalink">
-                  <a class="actionbutton" data-bind="attr: { href: content.permalink }" target="_blank"><i class="fa fa-link"></i></a>
+                <!-- ko if: (name == 'conversation') -->
+                <li>
+                  <a class="actionbutton" data-bind="click: function() { loadThreadForItem($parent, ($parent.content.type!='facebook_notification')); $parent.threadvisible(!$parent.threadvisible());return false; }" href="#" title="View Conversation"><i class="fa fa-comments"></i></a>
                 </li>
-              </ul>
-              <div class="clear"></div>
-              <div class="inlinethread" data-bind="slideVisible: threadvisible">
-                <div class="threadloading" data-bind="visible: threadloading"></div>
+                <!-- /ko -->
+                <!-- ko if: (name == 'retweet') -->
+                <li>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#" title="Retweet"><i class="fa fa-retweet"></i></a>
+                </li>
+                <!-- /ko -->
+                <!-- ko if: (name == 'favorite') -->
+                <li>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#" title="Favorite"><i class="fa fa-star"></i></a>
+                </li>
+                <!-- /ko -->
+                <!-- ko if: (name == 'like') -->
+                <li>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#" title="Like"><i class="fa fa-thumbs-o-up"></i></a>
+                </li>
+                <!-- /ko -->
+                <!-- ko if: (name == 'delete') -->
+                <li>
+                  <a class="actionbutton" data-bind="click: function(action) { performAction(action.params); return false;} " href="#">
+                  <!-- ko if: $parent.content.isretweet -->
+                    <i class="fa fa-times" title="Undo Retweet"></i>
+                  <!-- /ko -->
+                  <!-- ko ifnot: $parent.content.isretweet -->
+                    <i class="fa fa-trash-o" title="Delete"></i>
+                  <!-- /ko -->
+                 </a>
+                </li>
+                <!-- /ko -->
+              <!-- /ko -->
+              <li data-bind="if: content.permalink">
+                <a class="actionbutton" data-bind="attr: { href: content.permalink }" target="_blank" title="View original item"><i class="fa fa-link"></i></a>
+              </li>
+            </ul>
+            <div class="clear"></div>
+            <div class="inlinethread" data-bind="slideVisible: threadvisible">
+              <div class="threadloading" data-bind="visible: threadloading"></div>
                 <!-- ko foreach: thread -->
                 <div class="threaditem">
                   <div class="threaditem-fromuser">
