--- a/public/client.html
+++ b/public/client.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
   <title>SuccessWhale</title>
+  <meta name="description" content="SuccessWhale is a multi-column client for Twitter and Facebook that allows you to mix and match feeds however you like!"/>
   <link rel="stylesheet" href="css/normalize.css"/>
   <link rel="stylesheet" href="css/style.css"/>
   <link rel="stylesheet" href="css/font-awesome.min.css">
