Switch / to /client and /login to / to avoid the "flash of real UI" for new users

--- a/public/config.html
+++ b/public/config.html
@@ -16,7 +16,7 @@
   <div id="errorbox"></div>
   <div id="header">
     <div id="topmenu">
-      <a id="configbutton" class="button topmenuitem" href="/"><i class="fa fa-arrow-left"></i> Back</a>
+      <a id="configbutton" class="button topmenuitem" href="/client"><i class="fa fa-arrow-left"></i> Back</a>
     </div>
     <h2>Configuration</h2>
   </div>
