--- a/public/client.html
+++ b/public/client.html
@@ -56,10 +56,12 @@
                      * one column visible, selected by swipe. Rest invisible -->
   <div id="columns" data-bind="foreach: columns, style: { width: mobileView() ? '100%' : ((columns().length/colsPerScreen()*100) + '%') }">
     <div data-bind="name: fullpath, attr: {id: 'column'+$index()}, visible: (!($parent.mobileView()) || ($parent.mobileCurrentColumn()==$index())), style: { width: $parent.mobileView() ? '97%' : (100/$parent.columns().length-1 + '%') }" class="column">
+    <div class="columnheading" data-bind="style: { width: $parent.mobileView() ? '97%' : (100/$parent.columns().length-1 + '%') }" >
       <div class="colleft" data-bind="visible: ($parent.mobileView() && ($index()!=0))"><a href="#" data-bind="click: function() {mobileColumnLeft();}" title="Move Left"><i class="fa fa-chevron-left"></i></a></div>
       <div class="colright" data-bind="visible: ($parent.mobileView() && ($index()!=$parent.columns().length-1))"><a href="#" data-bind="click: function() {mobileColumnRight();}" title="Move Right"><i class="fa fa-chevron-right"></i></a></div>
       <div class="columnloading" data-bind="visible: loading"><i class="fa fa-refresh fa-spin"></i></div>
       <h4 class="columnheading" data-bind="text: title"></h4>
+    </div>
       <!-- ko foreach: items -->
         <div class="item" data-bind="css: (moment().diff(moment(content.time),'minutes') < $parents[1].highlightTime()) ? 'item-new' : 'item-old'">
           <div class="item-fromuser" data-bind="css: 'item-fromuser-'+service">
