--- a/public/config.html
+++ b/public/config.html
@@ -88,7 +88,7 @@
       <div class="item">
         <form>
           <h4>Banned Phrases</h4>
-          <p>Items containing the following phrases<br/>will not be displayed.<br/>(One per line)</p>
+          <p>Items containing the following phrases<br/>will not be displayed. (One per line)<br/>Advanced users can specify regexes<br/>between <code>/</code> characters, e.g. <code>/\d*/</code>.</p>
           <textarea cols="30" rows="5" id="bannedphrases" data-bind="value: bannedPhrases"></textarea>
           <p><a href="#" class="button" data-bind="click: setBannedPhrases"><i class="fa fa-save"></i> Save</a></p>
         </form>
